export class PartyElement {
    start
    duration
    text
    picture
    constructor(start, duration, text, picture) {
        this.start = start
        this.duration = duration
        this.text = text
        this.picture = picture
    }
}
