export class PartyPerformance {
    start
    partyId = null
    constructor(start, partyId) {
        this.start = start
        this.partyId = partyId
    }
}
